Fix pom to enable test execution